# werds

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: cli.rs
tests/fixtures/: long.txt  medium.txt
