[package]
name = "werds"
version = "0.1.0"
edition = "2021"
description = "Displays the number of words in the specified file(s). Inspired by the wc Unix program."
repository = "https://github.com/brettchalupa/werds"
authors = ["Brett Chalupa <brettchalupa@gmail.com>"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
